--- a/public/style.css
+++ b/public/style.css
@@ -39,7 +39,8 @@ body
   float: right;
   height: 100%;
   background-color: #0a7cec;
-  padding: 0 16px;
+  padding: 16px 16px 16px 20px;
+  border-radius: 0 0 0 30px;
   color: #ffffff;
   font-size: 24px;
   font-family: Comfortaa;
@@ -58,43 +59,20 @@ body
   background-color: #0862bb;
 }
 
-#user_dropdown
+.level_box
 {
-  position: fixed;
-  display: none;
-  flex-direction: row;
-  background-color: #4a5469;
+  position: absolute;
+  height: 16px;
+  width: 95%;
+  background-color: #333333;
   border-radius: 8px;
-  flex-direction: column;
-  right: 0;
-  top: 60px;
-  overflow: hidden;
-  text-align: center;
-  color: #ffffff;
-}
-
-.user_dropdown_item
-{
-  position: relative;
-  padding: 5px 30px;
-  cursor: pointer;
-  font-size: 20px;
-}
-
-.user_dropdown_item:hover
-{
-    background-color: #3a4252;
-}
-
-.user_dropdown_item:active
-{
-  background-color: #313846;
+  left: 2.5%;
+  bottom: 16px;
 }
 
 
 /*  SETTINGS WINDOW  */
-
-#settings_window
+#profile
 {
   position: fixed;
   display: none;
@@ -108,7 +86,7 @@ body
   z-index: 1;
 }
 
-.settings_window_header
+.profile_header
 {
   position: relative;
   background-color: #404858;
@@ -119,7 +97,7 @@ body
   padding: 16px 0 12px 16px;
 }
 
-.settings_window_close
+.profile_close
 {
   position: absolute;
   right: 16px;
@@ -131,12 +109,12 @@ body
   cursor: pointer;
 }
 
-.settings_window_close:hover
+.profile_close:hover
 {
   background-color: #d44545;
 }
 
-.settings_window_bg
+.profile_bg
 {
   position: fixed;
   display: none;
