--- a/public/style.css
+++ b/public/style.css
@@ -97,6 +97,61 @@ body
   padding: 16px 0 12px 16px;
 }
 
+.profile_box
+{
+  display: flex;
+  flex-direction: row;
+  padding: 10px 10px;
+}
+
+.profile_pic
+{
+  width: 38%;
+  height: 128px;
+  border-radius: 10px;
+  border-color: #404858;
+  border-width: 6px;
+  border-style: solid;
+  background-color: #ffffff;
+}
+
+.profile_data
+{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 0 10px;
+}
+
+.profile_name
+{
+  color: #ffffff;
+  font-size: 32px;
+  font-weight: bold;
+  font-family: Comfortaa;
+}
+
+.profile_level_box
+{
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+  height: 100%;
+}
+
+.profile_level
+{
+  color: #ffffff;
+}
+
+.profile_level_bar
+{
+  width: 100%;
+  height: 16px;
+  border-radius: 10px;
+  background-color: #333333;
+}
+
 .profile_close
 {
   position: absolute;
@@ -122,5 +177,5 @@ body
   bottom: 0;
   left: 0;
   right: 0;
-  backdrop-filter: blur(3px);
+  backdrop-filter: brightness(70%) blur(3px);
 }
