--- a/public/style.css
+++ b/public/style.css
@@ -59,19 +59,7 @@ body
   background-color: #0862bb;
 }
 
-.level_box
-{
-  position: absolute;
-  height: 16px;
-  width: 95%;
-  background-color: #333333;
-  border-radius: 8px;
-  left: 2.5%;
-  bottom: 16px;
-}
-
-
-/*  SETTINGS WINDOW  */
+/*  PROFILE WINDOW  */
 #profile
 {
   position: fixed;
@@ -88,78 +76,79 @@ body
 
 .profile_header
 {
-  position: relative;
+  position: absolute;
   background-color: #404858;
+  top: 0;
+  left: 0;
+  height: 39px;
+  width: 484px;
   color: #ffffff;
   font-size: 24px;
   font-family: Comfortaa;
   font-weight: bold;
-  padding: 16px 0 12px 16px;
-}
-
-.profile_box
-{
-  display: flex;
-  flex-direction: row;
-  padding: 10px 10px;
+  padding: 16px 0 0 16px;
 }
 
 .profile_pic
 {
-  width: 38%;
-  height: 128px;
-  border-radius: 10px;
+  position: absolute;
+  left: 0;
+  top: 55px;
+  width: 140px;
+  height: 140px;
+  background-color: #fff;
+  border-radius: 0 0 30px 0;
+  border-width: 10px;
   border-color: #404858;
-  border-width: 6px;
   border-style: solid;
-  background-color: #ffffff;
-}
-
-.profile_data
-{
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  padding: 0 10px;
 }
 
 .profile_name
 {
-  color: #ffffff;
+  position: absolute;
+  color: #fff;
   font-size: 32px;
   font-weight: bold;
   font-family: Comfortaa;
-}
-
-.profile_level_box
-{
-  display: flex;
-  flex-direction: column;
-  margin-top: 10px;
-  height: 100%;
+  height: 40px;
+  width: 250px;
+  left: 180px;
+  top: 107px;
 }
 
 .profile_level
 {
-  color: #ffffff;
+  position: absolute;
+  height: 40px;
+  width: 50px;
+  top: 107px;
+  left: 430px;
+  font-size: 32px;
+  font-weight: lighter;
+  font-family: Comfortaa;
+  text-align: right;
+  color: #bbb;
 }
 
 .profile_level_bar
 {
-  width: 100%;
+  position: absolute;
+  left: 180px;
+  top: 147px;
+  width: 300px;
   height: 16px;
   border-radius: 10px;
-  background-color: #333333;
+  background-color: #404858;
 }
 
 .profile_close
 {
   position: absolute;
-  right: 16px;
-  top: 16px;
-  height: 20px;
-  width: 20px;
-  border-radius: 10px;
+  right: 17px;
+  top: 17px;
+  height: 21px;
+  width: 21px;
+  border-radius: 11px;
   background-color: #f76161;
   cursor: pointer;
 }
