--- a/public/style.css
+++ b/public/style.css
@@ -158,6 +158,19 @@ body
   background-color: #d44545;
 }
 
+.profile_logout
+{
+  position: absolute;
+  width: 100%;
+  bottom: 20px;
+  text-align: center;
+  color: #f76161;
+  font-family: Comfortaa;
+  font-weight: 900;
+  font-size: 24px;
+  text-decoration: none;
+}
+
 .profile_bg
 {
   position: fixed;
