--- a/public/blog/style.css
+++ b/public/blog/style.css
@@ -19,7 +19,7 @@ body
   left: calc(50% - 350px);
   border-radius: 12px;
   background-color: #4a5469;
-  padding: 0 14px 10px 14px;
+  padding: 0 14px 0 14px;
   color: #ffffff;
 }
 
