--- a/public/dominoes/style.css
+++ b/public/dominoes/style.css
@@ -11,7 +11,7 @@ body
   left: calc(50% - 400px);
   top: calc(50% - 400px);
   border-radius: 24px;
-  background-color: #8e8678;
+  background-color: #59647b;
 }
 
 #tiles
