Updates in Blog section

--- a/public/blog/style.css
+++ b/public/blog/style.css
@@ -44,7 +44,7 @@ a:visited
   left: calc(50% - 350px);
   border-radius: 12px 12px 0 0;
   height: 16px;
-  background-color: #ff6b81;
+  background-color: #6ba2ff;
   z-index: 1;
 }
 
