--- a/public/style.css
+++ b/public/style.css
@@ -181,3 +181,64 @@ body
   right: 0;
   backdrop-filter: brightness(70%) blur(3px);
 }
+
+#gameChoose
+{
+  position: absolute;
+  top: 100px;
+  left: 10px;
+  right: 10px;
+  height: 400px;
+  margin: 0 30px;
+  padding: 10px 0;
+  overflow-x: scroll;
+  white-space: nowrap;
+  scroll-snap-type: x mandatory;
+  scroll-padding: 6px;
+}
+
+.gameChooseShadow
+{
+  position: absolute;
+  top: 100px;
+  left: 20px;
+  right: 20px;
+  height: 500px;
+  box-shadow: 0 -20px 20px 30px #2f3542 inset;
+  pointer-events: none;
+}
+
+.gameCard
+{
+  position: relative;
+  margin: 0 10px;
+  height: 100%;
+  width: 300px;
+  border-radius: 12px;
+  border-style: solid;
+  border-color: #434a5a;
+  border-width: 8px;
+  background-color: #363d4c;
+  scroll-snap-align: start;
+}
+
+::-webkit-scrollbar {
+  height: 17px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: none;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #404858;
+  border-radius: 12px;
+  background-clip: padding-box;
+}
+
+::-webkit-scrollbar-thumb:active {
+  background-color: #363d4c;
+  border-style: solid;
+  border-width: 5px;
+  border-color: #404858;
+}
