--- a/public/style.css
+++ b/public/style.css
@@ -47,6 +47,7 @@ body
   font-weight: bold;
   outline: none;
   border: none;
+  cursor: pointer;
 }
 
 .user_tile:hover
@@ -188,7 +189,7 @@ body
   top: 100px;
   left: 10px;
   right: 10px;
-  height: 400px;
+  height: 436px;
   margin: 0 30px;
   padding: 10px 0;
   overflow-x: scroll;
@@ -212,18 +213,32 @@ body
 {
   position: relative;
   margin: 0 10px;
+  padding: 0;
   height: 100%;
-  width: 300px;
+  width: 316px;
   border-radius: 12px;
   border-style: solid;
   border-color: #434a5a;
   border-width: 8px;
   background-color: #363d4c;
   scroll-snap-align: start;
+  transition: .2s;
+  cursor: pointer;
+  overflow: hidden;
+}
+
+.gameCard:hover
+{
+  transform: scale(0.98);
+}
+
+.gameCard:active
+{
+  transform: scale(0.95);
 }
 
 ::-webkit-scrollbar {
-  height: 17px;
+  height: 20px;
 }
 
 ::-webkit-scrollbar-track {
