--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,7 @@ body
 {
   background-color: #2f3542;
   user-select: none;
+
 }
 
 #header
@@ -256,4 +257,24 @@ body
   border-style: solid;
   border-width: 5px;
   border-color: #404858;
+}
+
+#advert
+{
+  position: absolute;
+  white-space: normal;
+  bottom: 10px;
+  left: calc(50% - 384px);
+  border-radius: 12px;
+  background: #232831;
+  min-width: 728px;
+}
+
+.ad
+{
+  position: relative;
+  height: 90px;
+  width: 728px;
+  margin: 10px;
+  background: #343c4c;
 }
