--- a/public/hangman/style.css
+++ b/public/hangman/style.css
@@ -8,9 +8,9 @@ body
 #board
 {
   position: absolute;
-  left: calc(50% - 640px);
+  left: calc(50% - 740px);
   top: calc(50% - 360px);
-  width: 1280px;
+  width: 1480px;
   height: 720px;
   border-radius: 24px;
   background-color: #59647b;
@@ -24,7 +24,7 @@ body
   top: 0;
   height: 720px;
   width: 720px;
-  background-color: #8b92a0;
+  background-color: #57606f;
 }
 
 .wordInput
@@ -32,10 +32,11 @@ body
   position: absolute;
   left: 988px;
   top: 60px;
-  width: 40px;
+  width: 50px;
   text-align: center;
   outline: none;
-  font-size: 36px;
+  font-size: 45px;
+  border-radius: 5px;
 }
 
 .wordTile
@@ -48,6 +49,7 @@ body
   font-size: 36px;
   background-color: #ffffff;
   border: 1px #3c4350 solid;
+  border-radius: 5px;
 }
 
 .result
