--- a/public/writing/style.css
+++ b/public/writing/style.css
@@ -1,25 +1,93 @@
-body
-{
+body {
   background-color: #2f3542;
   user-select: none;
   overflow: hidden;
   font-family: Comfortaa;
 }
 
-#list
-{
+#game {
   position: absolute;
-  width: 500px;
-  left: 10%;
+  display: flex;
+  width: 1100px;
+  left: 50%;
   top: 50%;
   height: 700px;
-  transform: translate(0%, -50%);
+  transform: translate(-50%, -50%);
+  border-radius: 12px;
+  background-color: #444444;
+  padding: 24px;
+  overflow-y: auto;
+  font-size: 20px;
+}
+
+.task {
+  position: relative;
+  width: 100%;
+  color: #ffffff;
+  font-size: 16px;
+  text-align: left;
+}
+
+#list {
+  position: relative;
+  max-height: 700px;
   border-radius: 12px;
   background-color: #95988d;
   padding: 24px;
   overflow-y: auto;
   font-size: 20px;
 }
+
+.textInput {
+  min-width: 450px;
+  min-height: 100px;
+  max-width: 450px;
+  max-height: 550px;
+  font-family: Comfortaa;
+  font-size: 20px;
+  background: none;
+  outline: none;
+  border: 4px solid #444444;
+  border-radius: 12px;
+}
+
+#message {
+  position: absolute;
+  visibility: hidden;
+  background-color: #00000055;
+  border-radius: 12px;
+  padding: 16px;
+  transform: translateY(-100%);
+  top: 0;
+  left: 20%;
+  right: 20%;
+  font-size: 20px;
+  color: #ffffff;
+  z-index: 4;
+  transition: .6s;
+  box-shadow: 0 0 7px 2px #7d7d7d;
+}
+
+button {
+  position: relative;
+  background-color: #ff7675;
+  border-radius: 14px;
+  transform: translateX(-50%);
+  left: 50%;
+  border: none;
+  padding: 16px;
+  font-size: 24px;
+  font-family: Comfortaa;
+  font-weight: bold;
+  color: #ffffff;
+  transition: .2s;
+}
+
+button:hover { transform: scale(0.98) translateX(-50%);}
+
+button:active { transform: scale(0.95) translateX(-50%);}
+
+
 
 ::-webkit-scrollbar {
     width: 16px;
@@ -37,8 +105,7 @@ body
     background: #555653;
 }
 
-input
-{
+input {
   background: none;
   border: none;
   outline: none;
@@ -50,7 +117,4 @@ input
   font-family: Comfortaa;
 }
 
-input:focus
-{
-  background: #00000033;
-}
+input:focus { background: #00000033;}
