--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,3 @@
-/* TODO: Correctly align header */
-
 body {
   background-color: var(--темный);
   font-family: Comfortaa!important;
@@ -28,6 +26,8 @@ body {
   overflow-y: auto;
   overflow-x: hidden;
   z-index: 4;
+  pointer-events: none;
+
 }
 
 .notif {
@@ -37,6 +37,7 @@ body {
   width: 330px;
   margin: 10px 0;
   border-radius: 12px;
+  pointer-events: all;
 }
 
 .notif_img {
@@ -177,54 +178,10 @@ body {
   background-color: #404858;
   top: 0;
   left: 0;
-  height: 39px;
   color: #ffffff;
   font-size: 24px;
   font-weight: bold;
-  padding: 16px 0 0 0;
-}
-
-.profile_friends {
-  position: relative;
-  width: 100%;
-  height: 390px;
-  overflow-y: auto;
-}
-
-.profile_friends_topbar {
-  position: relative;
-  color: #ffffff;
-  font-size: 24px;
-  width: 100%;
-  text-align: center;
-}
-
-.profile_friend_tile {
-  position: relative;
-  display: flex;
-  line-height: 0.83;
-  border-radius: 12px;
-  align-items: center;
   padding: 10px;
-  margin: 10px;
-  background-color: #ffffff;
-  overflow: hidden;
-}
-
-.profile_friend_icon {
-  position: relative;
-  background-color: #cccccc;
-  border-radius: 8px;
-}
-
-.profile_del_friend {
-  position: absolute;
-  right: 0;
-  padding: 16px;
-  height: 100%;
-  border: none;
-  background: crimson;
-  user-drag: none;
 }
 
 .window_close {
@@ -255,6 +212,7 @@ body {
 
 .profile_pic {
   position: relative;
+  float: left;
   left: 0;
   width: 140px;
   height: 140px;
@@ -304,6 +262,50 @@ body {
   font-weight: 900;
   font-size: 24px;
   text-decoration: none;
+}
+
+.profile_friends {
+  position: relative;
+  width: 100%;
+  height: 390px;
+  overflow-y: auto;
+}
+
+.profile_friends_topbar {
+  position: relative;
+  color: #ffffff;
+  font-size: 24px;
+  width: 100%;
+  text-align: center;
+}
+
+.profile_friend_tile {
+  position: relative;
+  display: flex;
+  line-height: 0.83;
+  border-radius: 12px;
+  align-items: center;
+  padding: 10px;
+  margin: 10px;
+  background-color: #ffffff;
+  overflow: hidden;
+}
+
+.profile_friend_icon {
+  position: relative;
+  background-color: #cccccc;
+  border-radius: 8px;
+}
+
+.profile_del_friend {
+  position: absolute;
+  right: 0;
+  height: 100%;
+  padding: 0 16px 0 16px;
+  border-radius: 8px;
+  border: none;
+  background: linear-gradient(to right, #ffffffd1, #ff9797);
+  cursor: pointer;
 }
 
 .profile_logout:hover { color: var(--алый); }
