--- a/public/style.css
+++ b/public/style.css
@@ -13,6 +13,7 @@ body {
   height: 60px;
 }
 
+
 /*NOTIFICATIONS*/
 
 #notif_box
@@ -171,6 +172,18 @@ body {
   border-radius: 8px;
   overflow: hidden;
   z-index: 9;
+  animation: win_anim 0.2s ease;
+}
+
+@keyframes win_anim {
+    0% {
+      transform: translate(-50%, 0);
+      opacity: 0;
+    }
+    100% {
+      transition: translate(-50%, -50%);
+      opacity: 1;
+    }
 }
 
 .window_header {
@@ -255,13 +268,15 @@ body {
 
 .profile_logout {
   position: absolute;
-  width: 100%;
+  transform: translate(-50%, 0);
+  left: 50%;
   bottom: 20px;
   text-align: center;
   color: var(--арбузный);
   font-weight: 900;
   font-size: 24px;
   text-decoration: none;
+  cursor: pointer;
 }
 
 .profile_friends {
