--- a/public/style.css
+++ b/public/style.css
@@ -22,11 +22,11 @@ body {
   transform: translateX(0%);
   top: 60px;
   bottom: 20px;
-  right: 20px;
+  right: 0px;
   width: 330px;
   overflow-y: auto;
   overflow-x: hidden;
-  z-index: 4;
+  z-index: 1;
   pointer-events: none;
 
 }
@@ -39,6 +39,16 @@ body {
   margin: 10px 0;
   border-radius: 12px;
   pointer-events: all;
+  animation: notif_anim 0.4s ease-out;
+}
+
+@keyframes notif_anim {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
 }
 
 .notif_img {
@@ -136,7 +146,7 @@ body {
   grid-gap: 10px;
   grid-template-columns: repeat(7, 1fr);
   grid-template-rows: repeat(7, 1fr);
-  top: 40px;
+  top: 50px;
   left: 0px;
   right: 0px;
   bottom: 40px;
@@ -217,6 +227,7 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
+  z-index: 2;
   backdrop-filter: brightness(70%);
 }
 
